--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,31 @@
 body {
-  background-color: #121212;
+  background-color: #be6c20;
+  color: #121212;
+  text-align: center;
 }
 
 button {
   padding: 5px 7px;
+  margin: 5px 3px;
+  max-width: fit-content;
 }
 
 img {
-  max-width: 800px;
-  max-height: 700px;
+  max-width: 13rem;
+  max-height: 12rem;
 }
 
-.factoid {
-  color: aliceblue;
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
+
+#container {
+  box-shadow: #121212 5px 5px 5px;
+  background-color: #ce7624;
+  border-radius: 7px;
+  max-width: 16rem;
+  margin: auto;
 }
