--- a/style/style.css
+++ b/style/style.css
@@ -1,31 +1,34 @@
 body {
-  background-color: #be6c20;
+  background-color: #9c591b;
   color: #121212;
   text-align: center;
 }
 
 button {
   padding: 5px 7px;
-  margin: 5px 3px;
+  margin: 10px 3px;
   max-width: fit-content;
+  border: #121212 solid 0.7px;
+  color: #121212;
+  background-color: #ce7624;
+  border-radius: 5px;
 }
 
 img {
-  max-width: 13rem;
-  max-height: 12rem;
+  max-width: 21rem;
+  max-height: 20rem;
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   margin: auto;
 }
 
 #container {
-  box-shadow: #121212 5px 5px 5px;
+  box-shadow: #121212 5px 5px 5px, #121212 -3px -3px 5px;
   background-color: #ce7624;
   border-radius: 7px;
-  max-width: 16rem;
-  margin: auto;
+  max-width: 26rem;
+  margin: 10px auto auto;
+  padding: 0.5rem;
+  visibility: hidden;
 }
