--- a/style/style.css
+++ b/style/style.css
@@ -21,8 +21,8 @@ button:hover {
 }
 
 img {
-  width: 20rem;
-  height: 20rem;
+  max-width: 20rem;
+  max-height: 20rem;
 }
 
 main {
@@ -41,7 +41,7 @@ main {
 
 @media (max-width: 400px) {
   img {
-    width: 10rem;
-    height: 10rem;
+    max-width: 10rem;
+    max-height: 10rem;
   }
 }
