--- a/style/style.css
+++ b/style/style.css
@@ -1,28 +1,38 @@
 body {
-  background-color: #9c591b;
-  color: #121212;
+  background-color: #CCC7B9;
+  color: #653239;
   text-align: center;
+  overflow: hidden;
 }
 
 button {
-  padding: 5px 7px;
-  margin: 10px 3px;
+  padding: 10px 30px;
+  margin: 15px 3px;
   max-width: fit-content;
-  border: #121212 solid 0.7px;
-  color: #121212;
-  background-color: #ce7624;
-  border-radius: 5px;
+  border: #653239 solid 0.7px;
+  color: #653239;
+  background-image: linear-gradient(to right, #E2D4BA 0%, #AF7A6D 51%, #E2D4BA 100%);;
+  border-radius: 50px;
   cursor: pointer;
+  transition: 0.5s;
+  background-size: 200% auto;
+  font-size: 1.4rem;
 }
 
-button:hover {
-  background-color: #db7e27;
-  border: #121212 solid 1.3px;
+button:hover, button:focus {
+  border: #52282e solid 1.3px;
+  background-position: right center;
+}
+p {
+  font-size: larger;
+  max-width: 50vw;
+  margin: 5px auto;
 }
 
 img {
-  max-width: 20rem;
-  max-height: 20rem;
+  max-width: 80vw;
+  max-height: 70vh;
+  margin-bottom: 7PX;
 }
 
 main {
@@ -30,13 +40,19 @@ main {
 }
 
 #container {
-  box-shadow: #121212 5px 5px 5px, #121212 -3px -3px 5px;
-  background-color: #ce7624;
+  box-shadow: #653239 5px 5px 10px, #653239 -3px -3px 10px;
+  background-color: #EAF9D9;
   border-radius: 7px;
-  max-width: 26rem;
+  width: fit-content;
+  max-width: 80vw;
   margin: 10px auto auto;
   padding: 1.5rem;
   visibility: hidden;
+}
+
+#error-el {
+  visibility: hidden;
+  color: crimson;
 }
 
 pre {
